feat: search integration fix - add SearchPageResponse/FacetBucketResponse DTOs, merge ES facets, fix price range label
- Add SearchPageResponse and FacetBucketResponse DTOs with SearchPageResponse<T>
- Fix ProductSearchHandler to merge category/condition/priceRange facets with group prefix
- Update SearchController return type to SearchPageResponse
- Fix FacetFilter formatPriceLabel to handle ES price range format (*-100, N-M, M-*)
- Fix pre-existing ProductRepositoryImpl batchInsert type mismatch
- Fix admin test TS errors from VO→Response rename refactoring
- Update ProductSearchHandlerTest for new return type

Closes: search integration data flow fix