@@ -1,6 +1,5 @@
 package com.cartethyia.easyorange.common.result;
 
-import java.util.Collections;
 import java.util.List;
 
 public record PageResult<T>(
@@ -14,7 +13,7 @@ public record PageResult<T>(
     public static <T> PageResult<T> of(List<T> records, long total, int pageNum, int pageSize) {
         int pages = pageSize > 0 ? (int) ((total + pageSize - 1) / pageSize) : 0;
         return new PageResult<>(
-                records != null ? records : Collections.emptyList(),
+                records != null ? records : List.of(),
                 total,
                 pageNum,
                 pageSize,
@@ -23,7 +22,7 @@ public record PageResult<T>(
     }
 
     public static <T> PageResult<T> empty(int pageNum, int pageSize) {
-        return of(Collections.emptyList(), 0L, pageNum, pageSize);
+        return of(List.of(), 0L, pageNum, pageSize);
     }
 
     public boolean hasData() {
